# micclav

./: .gitignore  README.md  settings.gradle.kts  setup.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/dictionaries/: ar_words.txt  en_words.txt  fr_words.txt  shi_latin_words.txt  shi_tifinagh_words.txt
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/micclav/keyboard/autocorrect/: AutoCorrectEngine.kt  FuzzyMatcher.kt  PhoneticMatcher.kt
app/src/main/java/com/micclav/keyboard/core/: Key.kt  KeyboardLanguage.kt  MicclavInputMethodService.kt
app/src/main/java/com/micclav/keyboard/dictionaries/: DictionaryManager.kt
app/src/main/java/com/micclav/keyboard/layouts/: ArabicLayout.kt  EnglishLayout.kt  FrenchLayout.kt  LayoutProvider.kt  NumberLayout.kt  SymbolLayout.kt  TachelhitLatinLayout.kt  TachelhitTifinaghLayout.kt
app/src/main/java/com/micclav/keyboard/ui/: KeyboardView.kt  SettingsActivity.kt
app/src/main/java/com/micclav/keyboard/voice/: WhisperEngine.kt
app/src/main/res/drawable/: ic_keyboard.xml  ic_mic.xml  key_background.xml  key_space_background.xml  key_special_background.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: method.xml
